<resources>
    <string name="app_name">MyApp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    // New strings

    <string name="Autoriz_Login">User ID:</string>
    <string name="Autoriz_Pass">Ключ API:</string>
    <string name="Autoriz_SignIn">Войти</string>
    <string name="Autoriz_SignUp">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->

</resources>